--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.0.0-dev.7
+  freezed: ^2.0.3+1
+  freezed_annotation: ^2.0.3
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.10
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
